# data-centers-geocoder

./: ChangeLog.md  LICENSE  MegaCodCoords.cabal  README.md
src/: CodInfo.hs  MegaCodCoords.hs
src/MegaCodCoords/: Internal.hs
test/: MegaCodCoordsSpec.hs
